<resources>
    <string name="app_name">Text To ASL</string>
    <string name="test">TESTING</string>
    <string name="seach_view">Search Here...</string>
    <string name="home_heading1">Welcome To</string>
    <string name="home_heading2">Text to ASL</string>
    <string name="home_card1">Letters to ASL</string>
    <string name="home_card2">Words to ASL</string>
    <string name="home_card3">Numbers to ASL</string>
    <string name="home_card4">New Module</string>


    <string name="asl_description_heading">ASL ALPHABET</string>
    <string name="asl_photo_title">A</string>
    <string name="asl_a_des_1">Make a fist with all fingers curled tightly into your palm. </string>
    <string name="asl_a_des_2">Place your thumb against the side of your index finger, resting along the outer edge.</string>

    <string name="asl_word_description_heading">ASL WORDS</string>
    <string name="asl_word_photo_title">BERRY</string>
    <string name="asl_word_hand">Hand Shape :</string>
    <string name="asl_word_location">Location :</string>
    <string name="asl_word_movement">Movement :</string>
    <string name="asl_word_expression">Face"\n"Experssion :</string>
    <string name="asl_word_hand_dscrp">Non-dominant hand in the "S" handshape (fist),dominant hand in the "F" handshape"\n"(thumb and index finger touching to form a circle, other fingers extended). </string>
    <string name="asl_word_location_dscrp">In front of your body.  </string>
    <string name="asl_word_movement_dscrp">Place the "F" handshape on the tip of the non-dominant hand’s pinky and twist the "F" handshape slightly.</string>
    <string name="asl_word_expression_dscrp"> Neutral. </string>

    <string name="under_construction_head">Sorry about That</string>
    <string name="uc_img_head">MODULE</string>
    <string name="uc_back_button">BACK</string>

    <string name="word_list_heading">WORDS LIST</string>
    <string name="word_list_one">Common Words</string>
    <string name="word_list_two">Fruits</string>
    <string name="word_list_three">Vegetables</string>
    <string name="word_list_four">Family</string>


    <string name="asl_alpha_word_search">More Info</string>
</resources>