<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".WordDescription"
    android:backgroundTint="@color/asl_bg"
    >
    <View
        android:id="@+id/view_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.15"
        android:background="@drawable/home_screen_view_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_heading_mother"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/view_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintVertical_bias="0.2"
        >
        <TextView
            android:id="@+id/asl_description_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/asl_word_description_heading"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textColor="@color/asl_text"
            android:textStyle="bold"
            android:fontFamily="@font/empire"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>



<!--    android:textColor="#005178"-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/asl_photo_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/asl_photo_dscrp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_bg"
        app:layout_constraintHeight_percent="0.3"
        >

        <ImageView
            android:id="@+id/asl_photo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/asl_photo_bg"
            android:padding="2dp"
            android:src="@drawable/asl_berry"
            app:layout_constraintDimensionRatio="0.88:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.35"
            app:layout_constraintBottom_toTopOf="@id/asl_photo_title"
            android:visibility="visible"
            />
        <ImageView
            android:id="@+id/asl_photo_family"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/asl_photo_bg"
            android:padding="2dp"
            android:src="@drawable/asl_baby"
            app:layout_constraintDimensionRatio="1.5:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.6"
            app:layout_constraintBottom_toTopOf="@id/asl_photo_title"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/asl_photo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/asl_word_photo_title"
            android:textSize="16pt"
           android:textColor="@color/card_palette8"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/asl_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/gollie"

            />
<!--        android:textColor="#0074ab"-->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/asl_photo_dscrp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/more_info_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="4"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/asl_photo_container"
        app:layout_constraintHeight_percent="0.45"
        >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="15dp"
            android:stretchColumns="0,1">
<!--            android:background="#bfeaff"-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:fontFamily="@font/teen_bold"
                    android:gravity="center"
                    android:text="@string/asl_word_hand"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/handShape_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="fill_vertical"
                    android:text="@string/asl_word_hand_dscrp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_margin="5dp"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:fontFamily="@font/teen_bold"
                    android:gravity="center"
                    android:text="@string/asl_word_location"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/location_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="fill_vertical"
                    android:text="@string/asl_word_location_dscrp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_margin="5dp"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:fontFamily="@font/teen_bold"
                    android:gravity="center"
                    android:text="@string/asl_word_movement"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/movement_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="fill_vertical"
                    android:text="@string/asl_word_movement_dscrp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_margin="5dp"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:fontFamily="@font/teen_bold"
                    android:gravity="center"
                    android:text="@string/asl_word_expression"
                    android:lines="2"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/face_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="fill_vertical"
                    android:text="@string/asl_word_expression_dscrp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_margin="5dp"
                    />
            </TableRow>


        </TableLayout>
        <!--        <GridLayout-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_weight="1"-->
        <!--            android:columnCount="2"-->
        <!--            android:rowCount="4"-->
        <!--            android:alignmentMode="alignBounds"-->
        <!--            android:rowOrderPreserved="false"-->
        <!--            android:useDefaultMargins="true"-->
        <!--            >-->
        <!--            <TextView-->
        <!--                android:layout_row="0"-->
        <!--                android:layout_column="0"-->
        <!--                android:layout_columnWeight="1"-->
        <!--                android:gravity="center"-->
        <!--                android:text="@string/asl_word_hand"-->
        <!--                android:textSize="16sp"-->
        <!--                android:textStyle="bold"-->
        <!--                android:textColor="@color/black"-->
        <!--                android:fontFamily="@font/teen_bold"-->
        <!--                />-->

        <!--            <TextView-->
        <!--                android:layout_width="242dp"-->
        <!--                android:layout_row="0"-->
        <!--                android:layout_column="1"-->
        <!--                android:layout_columnWeight="1"-->
        <!--                android:fontFamily="@font/roboto_regular"-->
        <!--                android:gravity="start"-->
        <!--                android:lines="5"-->
        <!--                android:padding="10dp"-->
        <!--                android:text="@string/asl_word_hand_dscrp"-->
        <!--                android:textColor="@color/black"-->
        <!--                android:textSize="16sp" />-->
        <!--            <TextView-->
        <!--                android:layout_row="1"-->
        <!--                android:layout_column="0"-->
        <!--                android:layout_columnWeight="1"-->
        <!--                android:text="@string/test"-->
        <!--                android:gravity="center"-->
        <!--                />-->
        <!--            <TextView-->
        <!--                android:layout_row="1"-->
        <!--                android:layout_column="1"-->
        <!--                android:layout_columnWeight="1"-->
        <!--                android:text="@string/test"-->
        <!--                android:gravity="start"-->
        <!--                />-->
        <!--            <TextView-->
        <!--                android:layout_row="2"-->
        <!--                android:layout_column="0"-->
        <!--                android:layout_columnWeight="1"-->
        <!--                android:text="@string/test"-->
        <!--                android:gravity="center"-->
        <!--                />-->
        <!--            <TextView-->
        <!--                android:layout_row="2"-->
        <!--                android:layout_column="1"-->
        <!--                android:layout_columnWeight="1"-->
        <!--                android:text="@string/test"-->
        <!--                android:gravity="start"-->
        <!--                />-->
        <!--            <TextView-->
        <!--                android:layout_row="3"-->
        <!--                android:layout_column="0"-->
        <!--                android:layout_columnWeight="1"-->
        <!--                android:text="@string/test"-->
        <!--                android:gravity="center"-->
        <!--                />-->
        <!--            <TextView-->
        <!--                android:layout_row="3"-->
        <!--                android:layout_column="1"-->
        <!--                android:layout_columnWeight="1"-->
        <!--                android:text="@string/test"-->
        <!--                android:gravity="start"-->
        <!--                />-->
        <!--        </GridLayout>-->

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>