<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen"
    android:background="@color/asl_bg"
    >

    <TextView
        android:id="@+id/home_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_heading1"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/asl_purple"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_heading">

        <androidx.cardview.widget.CardView
            android:id="@+id/text_to_asl"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:elevation="20dp"
            android:outlineAmbientShadowColor="@color/asl_purple"
            android:outlineSpotShadowColor="@color/asl_purple"
            app:cardCornerRadius="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_1_inside"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/home_card1"
                    android:textAlignment="center"
                    android:textColor="@color/asl_text"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/words_to_asl"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:elevation="20dp"
            android:outlineAmbientShadowColor="@color/asl_purple"
            android:outlineSpotShadowColor="@color/asl_purple"
            app:cardCornerRadius="30dp"
            android:layout_weight="1"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_2_inside"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/home_card2"
                    android:textAlignment="center"
                    android:textColor="@color/asl_text"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>